hotfix for gh-pages

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
 <script>
     var listContainer = document.querySelector(".table .list");
-    fetch("../data.json")
+    fetch("./data.json")
         .then(res => res.json())
         .then(data => {
 
